# tagentacle-py-mcp

./: CHANGELOG.md  README.md  README_CN.md  permission_node.py  pyproject.toml  tagentacle.toml
.github/: copilot-instructions.md
tagentacle_py_mcp/: __init__.py  auth.py  auth_client.py  mailbox.py  permission.py  server.py
tests/: test_mailbox_component.py  test_subscribe_levels.py
